--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>AoPS Blog CSS's by AndrewC10</title>
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="/AoPS-Blog-CSS/style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body>
@@ -64,7 +64,7 @@
             <h1 id="titletext"></h1>
         </div>
         <div id="csses">
-            
+
         </div>
         <div id="end" style="--color:white;" class="panel">
             <svg class="arrowdown" height="22" width="40" onclick="next(0)" style="transform: translate(-50%, calc(100vh - 60px)) rotate(180deg)">
@@ -77,6 +77,6 @@
             Made by <a href="https://actiniumn404.github.io" target="_blank">Actiniumn404</a> with &hearts; after many continuous hours of work. Please <a href="/contact" target="_blank">contact</a> me if you want to use this layout for your website.
         </div>
 
-        <script src="/script.js" defer></script>
+        <script src="/AoPS-Blog-CSS/script.js" defer></script>
     </body>
 </html>
